--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -169,15 +169,15 @@
                     @{
                     if (us_user_is_report_only)
                     {
-                        <input type="hidden" id="comment" name="post_type" value="comment">
+                        <input type="hidden" id="comment" name="post_type" value="@bd_issue.POST_TYPE_COMMENT">
                     } 
                     else
                     {
                         <!-- comment or email radio buttons -->
                         <tr><td>
-                            <input onchange="comment_or_email(this)" type="radio" id="comment" name="post_type" value="comment" checked>
+                            <input onchange="comment_or_email(this)" type="radio" id="comment" name="post_type" value="@bd_issue.POST_TYPE_COMMENT" checked>
                             <label for="comment">Comment</label>
-                            <input onchange="comment_or_email(this)" type="radio" id="email" name="post_type" value="email">
+                            <input onchange="comment_or_email(this)" type="radio" id="email" name="post_type" value="@bd_issue.POST_TYPE_EMAIL_OUT">
                             <label for="email">Email</label><br>
                         </td></tr>
                     }
@@ -436,7 +436,7 @@
          
     function comment_or_email(el) {
         var post_type = $(el).val();
-        if (post_type == "email") {
+        if (post_type == "@bd_issue.POST_TYPE_EMAIL_OUT") {
             $("#email_fields").show();
         }
         else {
