--- a/Pages/Admin/InviteUser.cshtml
+++ b/Pages/Admin/InviteUser.cshtml
@@ -13,11 +13,11 @@
     <table class="form_table">
     <tr>
         <td><label>Username</label>
-        <td><input asp-for="username" />
+        <td><input maxlength="20" asp-for="username" />
     </tr>
     <tr>
         <td><label>Email</label>
-        <td><input type="email" asp-for="email_address" />
+        <td><input maxlength="64" type="email" asp-for="email_address" />
     </tr>
     <tr>
         <td colspan="2">
