--- a/Pages/Admin/Query.cshtml
+++ b/Pages/Admin/Query.cshtml
@@ -71,7 +71,7 @@
         }
         <tr>
             <td><label>Name</label>
-            <td><input class="issue_query_name_input" asp-for="name"></input>
+            <td><input maxlength="80" class="issue_query_name_input" asp-for="name"></input>
         </tr>
         <tr>
             <td colspan="99"><label>Active</label>
