--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -70,7 +70,7 @@
         
             <tr>
                 <td><label>Description</label>
-                <td colspan=3><input class="issue_description_input" asp-for="description" disabled="@Model.disable_dropdowns_when_not_null"></input>
+                <td colspan=3><input maxlength="200"  class="issue_description_input" asp-for="description" disabled="@Model.disable_dropdowns_when_not_null"></input>
             </tr>
 
             <tr>
