--- a/Pages/Admin/Organization.cshtml
+++ b/Pages/Admin/Organization.cshtml
@@ -25,7 +25,7 @@
     }
     <tr>
         <td><label>Name</label>
-        <td><input asp-for="name"/>
+        <td><input maxlength="30" asp-for="name"/>
     </tr>
     <tr>
         <td><label>Active</label>
