cleanup to prepare for middle auth

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -84,6 +84,10 @@
     <td><a href="/Admin/Queries">Issue Queries</a> 
     <td>Customize the different "Views" of issues you see on the Issues page.
 </tr>
+<tr>
+    <td><a href="/Admin/ReportsAdmin">Reports</a> 
+    <td>Create/Update Reports
+</tr>
 
 <tr><td>&nbsp;<td>&nbsp;</tr><!--hacky line break-->
 
