--- a/Pages/Admin/Detail.cshtml
+++ b/Pages/Admin/Detail.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Create/Update @ViewData["Title"]</h1>
 
-<div><a href="List?field=@Model.field">Back to @Model.plural_label</a></div>
+<div><a href="/Admin/List?field=@Model.field">Back to @Model.plural_label</a></div>
 
 <partial name="_FlashPartial" />
 
