--- a/Pages/Admin/List.cshtml
+++ b/Pages/Admin/List.cshtml
@@ -7,7 +7,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div><a href="Detail?field=@(Model.field)&id=0">Create @Model.singular_label</a></div>
+<div><a href="/Admin/Detail?field=@(Model.field)&id=0">Create @Model.singular_label</a></div>
         
 <partial name="_CrudDataTableCustomPartial" />
 
