--- a/Pages/Admin/Logs.cshtml
+++ b/Pages/Admin/Logs.cshtml
@@ -20,10 +20,10 @@
             <tr>
                 <td>@file</td>
                 <td>
-                    <a href="Logs?handler=File&dl=0&filename=@file">View</a>
+                    <a href="/Admin/Logs?handler=File&dl=0&filename=@file">View</a>
                     &nbsp;
                     &nbsp;
-                    <a href="Logs?handler=File&dl=1&filename=@file">Download</a>
+                    <a href="/Admin/Logs?handler=File&dl=1&filename=@file">Download</a>
                 </td>
             </tr>
         
