--- a/Pages/Admin/Organization.cshtml
+++ b/Pages/Admin/Organization.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Create/Update @ViewData["Title"]</h1>
 
-<div><a href="Organizations">Back to Organizations</a></div>
+<div><a href="/Admin/Organizations">Back to Organizations</a></div>
 
 <partial name="_FlashPartial" />
 
