--- a/Pages/Admin/Organizations.cshtml
+++ b/Pages/Admin/Organizations.cshtml
@@ -11,7 +11,7 @@
 
 <partial name="_FlashPartial" />
 
-<div><a href="Organization?id=0">Create Organization</a></div>
+<div><a href="/Admin/Organization?id=0">Create Organization</a></div>
 
 <partial name="_CrudDataTablePartial" />
 
