--- a/Pages/Admin/Queries.cshtml
+++ b/Pages/Admin/Queries.cshtml
@@ -10,7 +10,7 @@
 <partial name="_FlashPartial" />
 
 <div class="just_left">
-<a href="Query?id=0">Create Issue Query</a>
+<a href="/Admin/Query?id=0">Create Issue Query</a>
 </div>
 
 <partial name="_CrudDataTableWithDeletePartial" />
