--- a/Pages/Admin/Query.cshtml
+++ b/Pages/Admin/Query.cshtml
@@ -9,7 +9,7 @@
 <h1>Create/Update @ViewData["Title"]</h1>
 
 <div class="just_left">
-    <a href="Queries">Back to Queries</a>
+    <a href="/Admin/Queries">Back to Queries</a>
 </div>
 
 <div class="fake_link" id="show_hide_link" onclick="show_hide_help()">Show Help</div>
