--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -8,7 +8,7 @@
 <h1>Update @ViewData["Title"]</h1>
 
 <div>
-    <a href="Users">Back to Users</a>
+    <a href="/Admin/Users">Back to Users</a>
 </div>
 <partial name="_FlashPartial" />
 
