--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -31,11 +31,11 @@
 </form>
 </div>
 
-<div><a href="ResetPasswordRequest">Forgot Password?</a></div>
+<div><a href="/ResetPasswordRequest">Forgot Password?</a></div>
 
 <div class="login_register">
     <div>Is this your first time?</div>
-    <div><a href="Register">Register</a></div>
+    <div><a href="/Register">Register</a></div>
 </div>
 
 @section Scripts {
