--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -35,8 +35,8 @@
 </div>
 
 <div>
-<div><a href="Login">Login</a></div>
-<div><a href="ResetPasswordRequest">Forgot Password?</a></div>
+<div><a href="/Login">Login</a></div>
+<div><a href="/ResetPasswordRequest">Forgot Password?</a></div>
 </div>
 
 @section Scripts {
