--- a/Pages/App/ViewReport.cshtml
+++ b/Pages/App/ViewReport.cshtml
@@ -13,7 +13,7 @@
     }
     else
     {
-        <a href="/Reports">Back to Reports</a>
+        <a href="/App/Reports">Back to Reports</a>
 
     }
 }
