--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -89,7 +89,7 @@
                                             File: @file_row["pa_file_name"], Size: @file_row["pa_file_length"],
                                             Type: @file_row["pa_file_content_type"]]
                                             &nbsp;&nbsp;
-                                            <a href="/File?handler=File&pa_id=@pa_id" download="@file_row["pa_file_name"]">Download</a>
+                                            <a href="/App/File?handler=File&pa_id=@pa_id" download="@file_row["pa_file_name"]">Download</a>
                                             &nbsp;&nbsp;
 
                                             @{
