screenshot tool works end to end

--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -103,7 +103,7 @@
                                         if (content_type.Contains("image"))
                                         {
                                             <div style="display:none" class="post_image" id="image_div_@pa_id">
-                                                <img class="post_img" src="/File?handler=File&pa_id=@pa_id" />
+                                                <img class="post_img" src="/App/File?handler=File&pa_id=@pa_id" />
                                             </div>
                                         }
                                     }
