--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -115,8 +115,9 @@
     <td>Troubleshoot problems with pending registration requests and user intvites.
 </tr>
 
-
-
+<tr>
+    <td><a href="/Admin/GitLog">Version Info</a>
+    <td>View output of git log -3 > git_log.txt
 </table>
 
 </div>
