Change second 'Organization' to 'User
The Issue page has twice an Organization label

--- a/Pages/App/Issue.cshtml
+++ b/Pages/App/Issue.cshtml
@@ -88,7 +88,7 @@
             <select class="issue_select" asp-for="organization_id" asp-items="@Model.organization_list" disabled="@Model.disable_dropdowns_when_not_null">
             </select>
             
-            <label class="issue_select_label" id="assigned_to_user_label">Organization</label>
+            <label class="issue_select_label" id="assigned_to_user_label">User</label>
             <select class="issue_select" asp-for="assigned_to_user_id" asp-items="@Model.assigned_to_user_list" disabled="@Model.disable_dropdowns_when_not_null">
             </select>
 
